--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar"
         android:usesCleartextTraffic="true">
+        <activity android:name=".RetoFotografia">
+            <intent-filter>
+                <action android:name="RETOS"/>
 
-        <activity android:name=".Maintab"></activity>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+        </activity>
+        <activity android:name=".Maintab" />
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,22 +32,14 @@
         <activity android:name=".DesafioCamara" />
         <activity android:name=".Login" />
         <activity android:name=".Principal">
-            <intent-filter>
-            <action android:name="RETOS" />
-
-            <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
         </activity>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ruteando_scharff"/>
-
-
+            android:resource="@drawable/ruteando_scharff" />
     </application>
 
 </manifest>
