--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ruteando_scharff"
+        android:icon="@drawable/web_hi_res_512"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ruteando_scharff"
         android:supportsRtl="true"
